--- a/public/style.css
+++ b/public/style.css
@@ -97,8 +97,13 @@ body {
     display:block;
 }
 
+#selected_type{
+    width: 150px;
+    height: 50px;
+}
+
 .film_data {
-    font-size: xx-large;
+    font-size: x-large;
 }
 
 #film_data_div {
@@ -169,6 +174,10 @@ a#skoc {
 }
 .dr:hover .info_text{
     visibility: visible;
+}
+
+#addFilmDiv:hover{
+    opacity: 75%;
 }
 
 .info .info_text {
