pridane funkcionality do adminskej casti - moznost editacie manazovanie pouzivatelov - vymazat alebo nastavit prava v aplikacii. Priadana ikonka stranky

--- a/public/style.css
+++ b/public/style.css
@@ -197,3 +197,22 @@ div .col{
 
 }
 
+#usersDiv {
+    position: absolute;
+    display: block;
+    width: 60%;
+    left: 50%;
+    transform: translateX(-50%);
+}
+
+.userDiv {
+    background-color: green;
+    margin-top: 20px;
+    position: relative;
+}
+
+.userDivCont {
+
+left: 20%;
+    position: relative;
+}
