--- a/public/style.css
+++ b/public/style.css
@@ -71,7 +71,7 @@ body {
     /*transform: translateX(-50%);*/
     width: 100%;
     height: 100%;
-    display:block;
+    display:inline;
 }
 
 #indiv {
@@ -80,11 +80,10 @@ body {
     padding-left: 50px;
     padding-right: 50px;
     position: absolute;
-    top:8%;
-    height: 84%;
+    top:2%;
+    height: 96%;
     left: 50%;
     transform: translateX(-50%);
-    background-color: brown;
     display:block;
 }
 
@@ -108,22 +107,22 @@ body {
 
 #film_data_div {
     position: relative;
-    top:50%;
-    transform: translateY(-50%);
+    display: inline;
 }
 
-/*#about_film {
-    width: 500px;
-    height: 500px;
-}*/
+#film_data_div form {
+    background-color: brown;
+    padding: 30px
+}
 
 .nadpis {
     font-family: monospace;
     text-align: center;
-    font-size: 100px;
+    font-size: 50px;
+    margin-top: 10px;
     background-color: brown;
     color: black;
-    opacity: 70%;
+    opacity: 100%;
 }
 
 #onas {
@@ -155,8 +154,7 @@ a#skoc {
 }
 
 .nadpis_film {
-    background-color: orange;
-    opacity: 40%;
+    background-color: brown;
     color: black;
     font-weight: bold;
     margin-top:10px;
@@ -192,11 +190,6 @@ a#skoc {
     user-select: none;
 }
 
-div .col{
-    background-color: aqua;
-
-}
-
 #usersDiv {
     position: absolute;
     display: block;
@@ -212,7 +205,22 @@ div .col{
 }
 
 .userDivCont {
-
-left: 20%;
+    width: 80%;
+    display: inline;
     position: relative;
+}
+
+.home {
+    padding: 10px;
+    margin: auto;
+}
+
+#ahoj{
+    font-family: monospace;
+    text-align: center;
+    font-size: 50px;
+    margin-top: 10px;
+    background-color: skyblue;
+    color: black;
+    opacity: 100%;
 }
