--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,9 @@
+
 body {
     background-image: url('https://resize.indiatvnews.com/en/resize/newbucket/1200_-/2020/07/cinema-halls-rep1-1595657539.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    z-index: 1;
 }
 
 
@@ -11,9 +11,6 @@ body {
     background-color:brown !important;
 }
 
-.prihlasenie.show {
-    background-color: brown;
-}
 
 .reg_log_button{
     width: 126px;
@@ -52,7 +49,7 @@ body {
 .nastavenia {
     margin-top: 10px;
 
-   position: relative;
+    position: relative;
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
@@ -244,32 +241,68 @@ a#skoc {
     height: 443px;
 }
 
-.wrapper{
-    z-index: 2;
-    position: absolute;
-    top: 0px;
-
-    /* Give them all the available space */
-    width: 100%;
-    height: 100%;
-
-    /* Remove the margins if any */
-    margin: 0;
-
-    /* Allow them to scroll down the document */
-    overflow-y: hidden;
-}
-
-/*#inputSpeed {
-    position:relative;
-    left: 50%;
-    transform: translate(-50%);
+.web-content {
+    position: relative;
 }
 
 #gameDiv {
-    position: absolute;
+    position:relative;
+    display:inline-block;
 }
 
 #myCanvas {
-    transform: translate(-50%);
-}*/
+    position:absolute;
+    display: inline;
+}
+
+#score {
+    position:absolute;
+    display: inline;
+}
+
+#startDiv {
+    position:absolute;
+    display:inline-block;
+}
+
+#speedLabel{
+    position:relative;
+    display:inline;
+}
+
+#speed{
+    position:relative;
+    display:inline;
+}
+
+#inputSpeedLabel{
+    position:relative;
+    display:inline;
+}
+
+#endDiv {
+    position:absolute;
+    display:inline-block;
+}
+
+#indivGame {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    position: absolute;
+    /*top:4%;*/
+    /*height: 100%;*/
+    left: 50%;
+    transform: translateX(-50%);
+    display:block;
+}
+
+.table .table-bordered .table-dark {
+    position: absolute;
+}
+
+#scoreTable {
+    /*position: absolute;*/
+}
+
