pridanie kolieska nacitania kym sa obsah nacita

--- a/public/style.css
+++ b/public/style.css
@@ -306,3 +306,24 @@ a#skoc {
     /*position: absolute;*/
 }
 
+#loading {
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    position: fixed;
+    opacity: 0.9;
+    display: block;
+    z-index: 99;
+    text-align: center;
+}
+
+#loading-image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:translate(-50%,-50%);
+    z-index: 100;
+}
+
+
